# fluxchat

./: .dockerignore  .env.example  .env.production  .gitignore  Cargo.toml  Dockerfile  build.bat  context.md  docker-compose.yml  livekit.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  start-tauri.ps1  tailwind.config.js  todo.md  vite.config.ts  vitest.config.ts
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  models.rs
crates/server/src/db/: mod.rs  schema.sql
crates/server/src/middleware/: auth.rs
crates/server/src/models/: message.rs  mod.rs  server.rs  user.rs
crates/server/src/routes/: auth.rs  cases.rs  craft.rs  dms.rs  economy.rs  emojis.rs  files.rs  inventory.rs  keys.rs  marketplace.rs  messages.rs  mod.rs  servers.rs  soundboard.rs  spotify.rs  trades.rs  users.rs  voice.rs  whitelist.rs  youtube.rs
crates/server/src/routes/auth/: mod.rs  session.rs
crates/server/src/routes/dms/: messages.rs  mod.rs
crates/server/src/routes/emojis/: favorites.rs  mod.rs
crates/server/src/routes/files/: mod.rs  preview.rs
crates/server/src/routes/gallery/: manage.rs  mod.rs
crates/server/src/routes/messages/: mod.rs  search.rs
crates/server/src/routes/roadmap/: manage.rs  mod.rs
crates/server/src/routes/servers/: channels.rs  channels_update.rs  members.rs  mod.rs  rooms.rs
crates/server/src/routes/soundboard/: manage.rs  mod.rs
crates/server/src/routes/spotify/: mod.rs  oauth.rs  sessions.rs  token.rs
crates/server/src/ws/: events.rs  gateway.rs  handler.rs
crates/server/src/ws/events/: mod.rs  server_event.rs
crates/server/src/ws/gateway/: broadcast.rs  mod.rs  voice.rs
crates/server/src/ws/handler/: chat.rs  chat_ext.rs  lifecycle.rs  misc.rs  mod.rs  voice.rs
crates/server/tests/: auth_session_test.rs  auth_signup_test.rs  auth_test.rs  craft_test.rs  dms_test.rs  economy_test.rs  files_preview_test.rs  files_test.rs  files_upload_test.rs  gateway_core_test.rs  gateway_state_test.rs  gateway_test.rs  keys_test.rs  messages_test.rs  room_cleanup_test.rs  room_create_test.rs  room_crud_test.rs  room_update_test.rs  room_ws_events_test.rs  room_ws_invite_test.rs  room_ws_knock_test.rs  room_ws_test.rs  room_ws_voice_test.rs  servers_core_test.rs  servers_members_test.rs  servers_test.rs  soundboard_crud_test.rs  soundboard_manage_test.rs  soundboard_test.rs  spotify_auth_test.rs  spotify_queue_test.rs  spotify_session_test.rs  spotify_test.rs  users_test.rs  voice_test.rs  whitelist_test.rs  ws_connection_test.rs  ws_dm_activity_test.rs  ws_edit_delete_test.rs  ws_test.rs  (+1 more)
crates/server/tests/common/: mod.rs  ws_helpers.rs
e2e/: appearance-settings.spec.ts  auth.spec.ts  channel-management.spec.ts  context-menus.spec.ts  dm-messaging.spec.ts  dms.spec.ts  economy.spec.ts  emoji-picker.spec.ts  file-upload.spec.ts  helpers.ts  keybinds.spec.ts  lobby-music.spec.ts  member-list.spec.ts  mentions.spec.ts  message-editing.spec.ts  (+16 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  capture.rs  global_keys.rs  lib.rs  main.rs
(+448 files in other folders)
