[package]
name = "flux-server"
version = "0.1.0"
edition = "2021"

[dependencies]
flux-shared = { path = "../shared" }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Bundle SQLite from source to guarantee FTS5 support
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"

# Regex
regex-lite = "0.1"

# IDs
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"

# LiveKit
livekit-api = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (link previews)
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# URL parsing / encoding
url = "2"
urlencoding = "2"

# Stream adapter
tokio-util = { version = "0.7", features = ["io"] }

# Futures for WebSocket
futures = "0.3"
